# fiverr-interview

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py  redis_client.py
app/api/v1/: health.py  links.py  router.py
app/db/: base.py  session.py
app/models/: __init__.py  link.py
app/schemas/: __init__.py  link.py
app/services/: fraud_service.py  link_service.py
docs/: CLAUDE_CODE_SETUP.md
tests/: conftest.py
tests/api/: test_health.py  test_links.py
tests/services/: test_fraud_service.py  test_link_service.py
